--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "typescript": "^4.6.4",
     "vite": "3.1.0-beta.1",
     "vite-plugin-md": "^0.11.8",
-    "pinia-plugin-persistedstate-2": "^1.0.1",
+    "pinia-plugin-persistedstate": "2.1.1",
     "vite-plugin-ssr": "0.4.38",
     "vue": "3.2.33"
   }
