--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "fetch": "^1.1.0",
     "node-fetch": "^2.6.1",
     "pinia": "^2.0.22",
+    "pinia-plugin-persistedstate-2": "^2.0.1",
     "typescript": "^4.6.4",
     "vite": "3.1.0-beta.1",
     "vite-plugin-md": "^0.11.8",
-    "pinia-plugin-persistedstate": "2.1.1",
     "vite-plugin-ssr": "0.4.38",
     "vue": "3.2.33"
   }
